--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
             <h1>Simple Interest Calculator</h1>
 
             Amount <input type="number"  id="principal">  <br/>
-            Rate <input type="range" id="rate" min="1" max="20" value="10.25"> 
-            <span id="rate_val"> 10.25% </span> <br/>
+            Rate <input type="range" class="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="getSliderValue()"> 
+            <span id="rate_val"> 
+            10.25 % 
+            </span> <br/>
             No. of Years <select id="years">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -28,6 +30,7 @@
             <span id="result">
 
             </span>
+            
             <footer>
 
                 &#169; Everyone Can Get Rich
